test/corpus/test-title_creds.txt
=====
Title Creds Test
=====

Title:
    _**BRICK & STEEL**_
    _**FULL RETIRED**_
Credit: Written by
Author: Stu Maschwitz
Source: Story by KTM
Draft date: 1/20/2012
Contact:
    Next Level Productions
    1588 Mission Dr.
    Solvang, CA 93463

NARRATOR (O.S.)
And ACTION

Actions start and continue
and continue

---

(document
  (title_page)
  (dialogue
    (dialogue_block
      (character)
      (speech)))
  (action))
